align(core,auth): complete P1 signature convergence to 2.0.x/3.0.x (batch 2)
1. AggregateRoot 升级为 3.0.x 完整版（475→JDK8 化）：
   - apply(E,boolean replay) 统一回放 + on<Type> 命名回退（resolveHandler）
   - 充血持久化静态方法 save/update(List)/page(Class,Q)/count 等
   - registerEvent/pullDomainEvents/clearDomainEvents 事件队列 API
   - JDK8 适配：匿名类显式泛型（ClassValue 嵌套）、instanceof 拆 cast
   - 调用方迁移：DddEventStoreRepository/AggregateRootTest
     getUncommittedChanges→pullDomainChanges 语义（domainEvents 系）
2. SaToken/ShiroSubjectProvider 覆写 getSubject(String realm)（多账号体系）
3. Biz*Exception 三件套同步 2.0.x 重载（无参 + Throwable 构造器）
4. ProfileManager 供应商化（Environment→Supplier<String[]>）：
   webmvc/webflux 两个 Configuration 改 environment::getActiveProfiles

验证：mvn clean compile 全量 BUILD SUCCESS（排除增量编译假象）